# const_static_inline_msvc_2019_ice

./: CMakeLists.txt  README.md  interface.cpp  interface.h  main.cpp
